--- a/comm/src/main/res/values/strings.xml
+++ b/comm/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="comName">MvRxDemo</string>
     <string name="loadHint">正在加载…</string>
 
+    <string name="noMoreTips">没有更多了~</string>
+
 </resources>
