--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MvRxDemo</string>
+
+    <string name="hint_phoneNumber">输入手机号</string>
+    <string name="hint_password">输入验证码</string>
+    <string name="login">登录</string>
+
+
 </resources>
